Changelog
=========

1.1 - Unreleased
----------------


1.0 - 2010-12-30
----------------

- Initial release
  [stefan]
