@@ -4,6 +4,8 @@ Changelog
 1.1 - Unreleased
 ----------------
 
+- Add ``-s`` option to select styles on the command line.
+  [stefan]
 
 1.0 - 2010-12-30
 ----------------
